Write result to new file